fixed links + broken css

--- a/src/Components/Recipe.css
+++ b/src/Components/Recipe.css
@@ -2,17 +2,17 @@
     margin-top: 40px !important;
 }
 
-img{
+/* img{
     height: 200px !important;
-}
+} */
 
 img:hover{
    cursor: pointer;
 }
-
+/* 
 button{
     color: aqua !important;
-}
+} */
 
 .loading{
     padding-top: 100px;
